# mindhub-backend

./: .env.example  .gitignore  README.md  check_environment.py  docker-compose.yml  pyproject.toml  traduzir_mensagens.py  uml.puml
app/: config.py  main.py
app/db/: database.py
app/models/: user.py
docs/: estrutura_do_projeto.txt
docs/umls/: 10-applicatiion-content.puml
src/: main.py
src/application/common/: page.py  pageable.py  use_case.py
src/application/dtos/: appointment_dto.py  approach_dto.py  availability_dto.py  city_dto.py  content_dto.py  patient_dto.py  pix_payment_dto.py  psychologist_dto.py  specialty_dto.py  state_dto.py  user_dto.py
src/application/filters/: appointment_filters.py  approach_filters.py  availability_filters.py  city_filters.py  content_filters.py  patient_filters.py  psychologist_filters.py  specialty_filters.py  state_filters.py
src/application/repos/: iappointment_repo.py  iapproach_repo.py  iavailability_repo.py  icity_repo.py  icontent_repo.py  ipatient_repo.py  ipsychologist_repo.py  ispecialty_repo.py  istate_repo.py  iuser_repo.py
src/application/services/: __init__.py  iauth_service.py  ifile_service.py  ipix_payment_service.py
src/domain/: appointment.py  approach.py  availability.py  city.py  content.py  patient.py  payment.py  pix_payment.py  psychologist.py  specialty.py  state.py  user.py
src/domain/common/: entity.py  guard.py  identifier.py  unique_entity_id.py
src/domain/value_objects/: cpf.py  crp.py  email.py  password.py  phone_number.py
src/infra/config/: logger.py  mongo_db_manager.py  redis.py  settings.py
src/infra/http/: app.py
src/infra/mappers/: imapper.py
src/infra/providers/: __init__.py  approach_provider.py  base_provider.py  content_provider.py  geography_provider.py  mongo_provider.py  patient_provider.py  psychologist_provider.py  session_provider.py  specialty_provider.py  user_provider.py
src/infra/routers/: __init__.py  appointment_router.py  approach_router.py  content_router.py  geography_router.py  patient_router.py  psychologist_router.py  session_router.py  specialty_router.py  user_router.py  utils.py
src/infra/services/: __init__.py  ibge_service.py  (+4 more)
(+92 files in other folders)
