[project]
name = "mindhub-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = ["poethepoet>=0.37.0", "ruff>=0.13.0"]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
build = "uv build"
check = "ruff check ."
format = "ruff format ."
dev = "uv run python src/main.py"
start-dev = ["format", "dev"]
